GH-2394 Enable CI pipeline for 7.0.x branch.
See #2394